objects/RX_ExIm_Journal_Item__c.object
<CustomObject>
    <description>Import audit trail item</description>
    <fields>
        <fullName>IsCreated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Created</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Note__c</fullName>
        <label>Note</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object_Name__c</fullName>
        <label>Object Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Operation__c</fullName>
        <label>Operation</label>
        <picklist>
            <picklistValues>
                <fullName>Created</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Updated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deleted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Error</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>RX_ExIm_Journal__c</fullName>
        <label>Export Import Journal</label>
        <referenceTo>RX_ExIm_Journal__c</referenceTo>
        <relationshipLabel>REVVY Export Import Journal Items</relationshipLabel>
        <relationshipName>REVVY_Export_Import_Journal_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>SFDC_Id__c</fullName>
        <label>SFDC Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>REVVY Export Import Journal Item</label>
    <nameField>
        <label>REVVY Export Import Journal Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>REVVY Export Import Journal Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>